fixed responsiveness on smallest phones

--- a/src/style.css
+++ b/src/style.css
@@ -98,7 +98,7 @@ main h2 {
 }
 
 .stat-label {
-	font-size: clamp(0.55rem, 1.5vw, 0.8rem);
+	font-size: clamp(0.45rem, 1vw, 0.8rem);
 	color: #666;
 	text-transform: uppercase;
 	font-weight: 600;
@@ -106,7 +106,7 @@ main h2 {
 }
 
 .stat-value {
-	font-size: clamp(0.9rem, 3vw, 1.5rem);
+	font-size: clamp(0.7rem, 2vw, 1.5rem);
 	font-weight: bold;
 }
 
@@ -432,6 +432,16 @@ button {
 		font-size: 2em;
 	}
 
+	#map-header {
+
+		select {
+			padding: 0;
+			margin: 0;
+			border-radius: 4px;
+			height: 26px;
+		}
+	}
+
 	#table-controls {
 		flex-direction: column;
 	}
@@ -440,5 +450,21 @@ button {
 @media (max-width: 480px) {
 	.dashboard-header h1 {
 		font-size: 1.75em;
+	}
+}
+
+@media (max-width: 400px) {
+	#map-legend,
+	#map-header select {
+		padding: 0;
+		margin: 0;
+	}
+
+	#map-header {
+		justify-content: left;
+	}
+
+	#map-legend {
+		width: 70%;
 	}
 }
